--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,7 @@
 
 <body class="bg-light">
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand text-white" href="#"><judul></judul></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-    </nav>
+    <nav-comp></nav-comp>
   </header>
   <div class="container mt-5">
     <nav class="btn btn-primary btn-lg btn-block mb-1">
@@ -42,18 +35,8 @@
           <div class=" list-group overflow-auto" id="terbaru">
             <div class="ph-item">
               <div class="ph-col-12">
-                <div class="ph-row">
-                  <div class="ph-col-12"></div>
-                  <div class="ph-col-12"></div>
-                  <div class="ph-col-12"></div>
-                  <div class="ph-col-12"></div>
-                  <div class="ph-col-12"></div>
-                  <div class="ph-col-12"></div>
-                  <div class="ph-col-12"></div>
-                  <div class="ph-col-12"></div>
-                  <div class="ph-col-12"></div>
-                  <div class="ph-col-12"></div>                
-                </div>
+                <placeholder-comp></placeholder-comp>
+
               </div>      
             </div>
           
@@ -65,7 +48,7 @@
     <h2 class="text-white">Berita Lainnya</h2>
   </nav>
   <div class="card-group mt-3 mb-3">
-    <div class="card  col-md-4 col-sm-12 ">
+    <div class="card col col-md-4 col-sm-12 ">
       <div class="card-header bg-success text-white">Kesehatan >></div>
       <div class="card-body" id="kesehatan"> 
         <div class="ph-item">
@@ -77,19 +60,12 @@
       </div>
       <div class="card-footer list-group" id="allKesehatan">
         <div class="ph-item">
-          <div class="ph-col-12">
-            <div class="ph-row">
-              <div class="ph-col-12"></div>
-              <div class="ph-col-12"></div>
-              <div class="ph-col-12"></div>
-              <div class="ph-col-12"></div>
-              <div class="ph-col-12"></div>              
-            </div>
-          </div>      
+          <placeholder-comp></placeholder-comp>
+
         </div>
       </div>
     </div>
-    <div class="card col-md-4 col-sm-12 ">
+    <div class="card col col-md-4 col-sm-12 ">
       <div class="card-header bg-danger text-white">Olahraga >></div>
       <div class="card-body" id="olahraga">
         <div class="ph-item">
@@ -100,20 +76,11 @@
         </div>
         </div>
         <div class="card-footer list-group" id="allOlahraga">
-          <div class="ph-item">
-            <div class="ph-col-12">
-              <div class="ph-row">
-                <div class="ph-col-12"></div>
-                <div class="ph-col-12"></div>
-                <div class="ph-col-12"></div>
-                <div class="ph-col-12"></div>
-                <div class="ph-col-12"></div>              
-              </div>
-            </div>      
-          </div>
+          <placeholder-comp></placeholder-comp>
+
         </div>
     </div>
-    <div class="card col-md-4 col-sm-12 ">
+    <div class="card col col-md-4 col-sm-12 ">
       <div class="card-header bg-warning text-white">Entertaiment >></div>
       <div class="card-body" id="entertaiment">
         <div class="ph-item">
@@ -124,17 +91,7 @@
         </div>
     </div>
     <div class="card-footer list-group" id="allEntertaiment">
-      <div class="ph-item">
-        <div class="ph-col-12">
-          <div class="ph-row">
-            <div class="ph-col-12"></div>
-            <div class="ph-col-12"></div>
-            <div class="ph-col-12"></div>
-            <div class="ph-col-12"></div>
-            <div class="ph-col-12"></div>              
-          </div>
-        </div>      
-      </div>
+        <placeholder-comp></placeholder-comp>
     </div>
     </div>
   </div>
@@ -145,7 +102,7 @@
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href=""> Muhammad Masykur</a>
+      <a class="text-white" href=""> Muhammad Masykur</a>
     </div>
     <!-- Copyright -->
   
